# llm_ocr

./: .gitignore  pyproject.toml
src/: main.py
src/apps/bot/: api.py
src/apps/bot/elements/: elements.py
src/apps/bot/services/: extract_text.py  llm_service.py  summarizer.py
src/core/: settings.py
